Start on GM simluator

--- a/analytics/college-football-lines.ipynb
+++ b/analytics/college-football-lines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "460ac1c7",
    "metadata": {},
    "outputs": [
@@ -35,18 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "38531a83",
    "metadata": {},
    "outputs": [],
    "source": [
     "season = 2025\n",
-    "week = 6"
+    "week = 'bowl'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "3b567d82",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "\tbetting_api = cfbd.BettingApi(api_client)\n",
     "\n",
     "\ttry:\n",
-    "\t\tlines = betting_api.get_lines(year=season, week=week, provider='DraftKings')\n",
+    "\t\tlines = betting_api.get_lines(year=season, season_type='postseason', provider='DraftKings')\n",
     "\t\tlines_df = pd.DataFrame([line.to_dict() for line in lines])\n",
     "\n",
     "\t\t# Extract the first object from the 'lines' list in each row\n",
