--- a/analytics/college-football.ipynb
+++ b/analytics/college-football.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 43,
    "id": "995972b4",
    "metadata": {},
    "outputs": [
@@ -45,21 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 44,
    "id": "355d13a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
     "\n",
-    "year = 2022\n",
-    "week = 11\n",
+    "year = 2025\n",
+    "week = 'bowl'\n",
     "provider = 'DraftKings'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 45,
    "id": "28a4c2e2",
    "metadata": {},
    "outputs": [],
@@ -69,12 +69,12 @@
     "\t\trating_api = cfbd.RatingsApi(api_client)\n",
     "\n",
     "\t\ttry:\n",
-    "\t\t\t\telo = rating_api.get_elo(year=year, week=week)\n",
+    "\t\t\t\telo = rating_api.get_elo(year=year, season_type='postseason')\n",
     "\t\t\t\tratings_df = pd.DataFrame([r.to_dict() for r in elo])\n",
     "\n",
     "\t\t\t\tfpi = rating_api.get_fpi(year=year)\n",
     "\t\t\t\tfpi_df = pd.DataFrame([r.to_dict() for r in fpi])\n",
-    "\n",
+    "\t\n",
     "\t\t\t\tsp = rating_api.get_sp(year=year)\n",
     "\t\t\t\tsp_df = pd.DataFrame([r.to_dict() for r in sp])\n",
     "\n",
@@ -83,8 +83,7 @@
     "\t\t\t\tmerged_df['offense'] = merged_df['offense'].apply(lambda x: x['rating'] if isinstance(x, dict) and 'rating' in x else None)\n",
     "\t\t\t\tmerged_df['defense'] = merged_df['defense'].apply(lambda x: x['rating'] if isinstance(x, dict) and 'rating' in x else None)\n",
     "\n",
-    "\t\t\t\treturn merged_df[['team', 'year', 'elo', 'fpi',\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t'rating', 'offense', 'defense']]\n",
+    "\t\t\t\treturn merged_df[['team', 'year', 'elo', 'fpi', 'rating', 'offense', 'defense']]\n",
     "\n",
     "\t\texcept Exception as e:\n",
     "\t\t\t\tprint(\"Error fetching ratings:\", e)"
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 46,
    "id": "70e5bcef",
    "metadata": {},
    "outputs": [],
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 47,
    "id": "fdaba14b",
    "metadata": {},
    "outputs": [],
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 48,
    "id": "eb74278b",
    "metadata": {},
    "outputs": [],
@@ -152,7 +151,7 @@
     "\t\tclassification = cfbd.DivisionClassification('fbs')\n",
     "\n",
     "\t\ttry:\n",
-    "\t\t\t\tgames = games_api.get_games(year=year, week=week, classification=classification)\n",
+    "\t\t\t\tgames = games_api.get_games(year=year, season_type='postseason', classification=classification)\n",
     "\t\t\t\tgames_df = pd.DataFrame([g.to_dict() for g in games])\n",
     "\n",
     "\t\t\t\tgames_df = games_df[games_df['homeClassification'] == classification]\n",
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 49,
    "id": "cdedb96d",
    "metadata": {},
    "outputs": [],
@@ -174,10 +173,10 @@
     "merged_df = pd.DataFrame()\n",
     "\n",
     "with cfbd.ApiClient(configuration) as api_client:\n",
-    "\trating_df = fetch_team_ratings(year, week, api_client)\n",
+    "\trating_df = fetch_team_ratings(year, week=14, api_client=api_client)\n",
     "\tadvanced_metrics_df = fetch_team_advanced_metrics(year, api_client)\n",
     "\trecruiting_rankings_df = fetch_recruiting_rankings(year, api_client)\n",
-    "\tgames = fetch_games(year, week, api_client)\n",
+    "\tgames = fetch_games(year, week=14, api_client=api_client)\n",
     "\n",
     "\t# After merging for a single year:\n",
     "\tmerged_df = rating_df.merge(advanced_metrics_df, on=\"team\").merge(recruiting_rankings_df, on=\"team\")\n"
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 50,
    "id": "1d8a59ee",
    "metadata": {},
    "outputs": [
@@ -193,40 +192,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   season  week  homeId          homeTeam           awayTeam  awayId  \\\n",
-      "0    2022    11    2006             Akron   Eastern Michigan    2199   \n",
-      "1    2022    11     193        Miami (OH)               Ohio     195   \n",
-      "2    2022    11    2649            Toledo         Ball State    2050   \n",
-      "3    2022    11    2711  Western Michigan  Northern Illinois    2459   \n",
-      "4    2022    11     189     Bowling Green         Kent State    2309   \n",
+      "   season  week  homeId            homeTeam        awayTeam  awayId  \\\n",
+      "0    2025     1     264          Washington     Boise State      68   \n",
+      "1    2025     1      55  Jacksonville State            Troy    2653   \n",
+      "2    2025     1      58       South Florida    Old Dominion     295   \n",
+      "3    2025     1      48            Delaware       Louisiana     309   \n",
+      "4    2025     1    2032      Arkansas State  Missouri State    2623   \n",
       "\n",
       "   homePoints  awayPoints  home_year_x  home_elo  ...  away_year_y  away_epa  \\\n",
-      "0          28          34       2022.0     985.0  ...         2022  0.200166   \n",
-      "1          21          37       2022.0    1374.0  ...         2022  0.193677   \n",
-      "2          28          21       2022.0    1549.0  ...         2022  0.087621   \n",
-      "3          21          24       2022.0    1275.0  ...         2022  0.150027   \n",
-      "4           6          40       2022.0    1096.0  ...         2022  0.157637   \n",
+      "0        38.0        10.0         2025      1866  ...         2025  0.160904   \n",
+      "1        17.0        13.0         2025      1490  ...         2025  0.081672   \n",
+      "2        10.0        24.0         2025      1778  ...         2025  0.176859   \n",
+      "3        20.0        13.0         2025      1351  ...         2025  0.104463   \n",
+      "4        34.0        28.0         2025      1312  ...         2025  0.145374   \n",
       "\n",
       "   away_epaAllowed  away_successRate  away_successRateAllowed  \\\n",
-      "0         0.229852          0.452257                 0.455978   \n",
-      "1         0.233068          0.430223                 0.450630   \n",
-      "2         0.181127          0.383350                 0.444041   \n",
-      "3         0.262101          0.410668                 0.456084   \n",
-      "4         0.212981          0.423898                 0.454604   \n",
+      "0         0.100090          0.404045                 0.361876   \n",
+      "1         0.146547          0.368677                 0.421777   \n",
+      "2         0.067015          0.443751                 0.397751   \n",
+      "3         0.223241          0.378474                 0.484793   \n",
+      "4         0.238624          0.384626                 0.449920   \n",
       "\n",
       "   away_explosiveness  away_explosivenessAllowed  away_year  away_rank  \\\n",
-      "0            0.911472                   0.893678       2022        128   \n",
-      "1            0.916004                   0.986666       2022        132   \n",
-      "2            0.940191                   0.944519       2022         97   \n",
-      "3            0.960970                   0.922859       2022         87   \n",
-      "4            0.957178                   0.932259       2022         90   \n",
+      "0            0.961344                   1.063515       2025         62   \n",
+      "1            0.915709                   0.964934       2025         82   \n",
+      "2            0.926483                   0.891374       2025        102   \n",
+      "3            0.965802                   0.954579       2025         81   \n",
+      "4            0.981231                   1.018968       2025        136   \n",
       "\n",
       "   away_points  \n",
-      "0        77.97  \n",
-      "1        53.67  \n",
-      "2       127.25  \n",
-      "3       142.15  \n",
-      "4       136.64  \n",
+      "0       189.06  \n",
+      "1       164.69  \n",
+      "2       144.31  \n",
+      "3       165.34  \n",
+      "4        52.92  \n",
       "\n",
       "[5 rows x 40 columns]\n"
      ]
@@ -256,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 51,
    "id": "2a4e2015",
    "metadata": {},
    "outputs": [],
