--- a/sports-iq-integration/nfl/test.ipynb
+++ b/sports-iq-integration/nfl/test.ipynb
@@ -2,38 +2,365 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "221db97e",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season</th>\n",
+       "      <th>player</th>\n",
+       "      <th>pfr_id</th>\n",
+       "      <th>tm</th>\n",
+       "      <th>age</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>g</th>\n",
+       "      <th>gs</th>\n",
+       "      <th>int</th>\n",
+       "      <th>tgt</th>\n",
+       "      <th>...</th>\n",
+       "      <th>bltz</th>\n",
+       "      <th>hrry</th>\n",
+       "      <th>qbkd</th>\n",
+       "      <th>sk</th>\n",
+       "      <th>prss</th>\n",
+       "      <th>comb</th>\n",
+       "      <th>m_tkl</th>\n",
+       "      <th>m_tkl_percent</th>\n",
+       "      <th>loaded</th>\n",
+       "      <th>bats</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Jordyn Brooks</td>\n",
+       "      <td>BrooJo01</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>LB</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.052</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Jack Campbell</td>\n",
+       "      <td>CampJa04</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>LB</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>176.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Devin White</td>\n",
+       "      <td>WhitDe02</td>\n",
+       "      <td>LV</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>LB</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Cedric Gray</td>\n",
+       "      <td>GrayCe00</td>\n",
+       "      <td>TEN</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>LB</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Bobby Wagner</td>\n",
+       "      <td>WagnBo00</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>MLB</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1020</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Brian Thomas</td>\n",
+       "      <td>ThomBr06</td>\n",
+       "      <td>JAX</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1021</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Tommy Townsend</td>\n",
+       "      <td>TownTo01</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>P</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1022</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Jordan Watkins</td>\n",
+       "      <td>WatkJo00</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1023</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Kyren Williams</td>\n",
+       "      <td>WillKy02</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>RB</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1024</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Rejzohn Wright</td>\n",
+       "      <td>WrigRe00</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>CB</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>2026-01-17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1025 rows × 30 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['player',\n",
-       " 'position',\n",
-       " 'team',\n",
-       " 'is_active',\n",
-       " 'year_signed',\n",
-       " 'years',\n",
-       " 'value',\n",
-       " 'apy',\n",
-       " 'guaranteed',\n",
-       " 'apy_cap_pct',\n",
-       " 'inflated_value',\n",
-       " 'inflated_apy',\n",
-       " 'inflated_guaranteed',\n",
-       " 'player_page',\n",
-       " 'otc_id',\n",
-       " 'gsis_id',\n",
-       " 'date_of_birth',\n",
-       " 'height',\n",
-       " 'weight',\n",
-       " 'college',\n",
-       " 'draft_year',\n",
-       " 'draft_round',\n",
-       " 'draft_overall',\n",
-       " 'draft_team',\n",
-       " 'cols']"
+       "      season          player    pfr_id   tm   age  pos     g    gs  int   tgt  \\\n",
+       "0       2025   Jordyn Brooks  BrooJo01  MIA  28.0   LB  17.0  17.0  0.0  86.0   \n",
+       "1       2025   Jack Campbell  CampJa04  DET  25.0   LB  17.0  17.0  0.0  62.0   \n",
+       "2       2025     Devin White  WhitDe02   LV  27.0   LB  17.0  17.0  1.0  91.0   \n",
+       "3       2025     Cedric Gray  GrayCe00  TEN  23.0   LB  16.0  16.0  0.0  59.0   \n",
+       "4       2025    Bobby Wagner  WagnBo00  WAS  35.0  MLB  17.0  17.0  2.0  57.0   \n",
+       "...      ...             ...       ...  ...   ...  ...   ...   ...  ...   ...   \n",
+       "1020    2025    Brian Thomas  ThomBr06  JAX  23.0   WR  14.0  14.0  0.0   0.0   \n",
+       "1021    2025  Tommy Townsend  TownTo01  HOU  29.0    P  17.0   0.0  0.0   1.0   \n",
+       "1022    2025  Jordan Watkins  WatkJo00   SF  23.0   WR   4.0   0.0  0.0   0.0   \n",
+       "1023    2025  Kyren Williams  WillKy02   LA  25.0   RB  17.0  17.0  0.0   1.0   \n",
+       "1024    2025  Rejzohn Wright  WrigRe00   NO  25.0   CB   4.0   0.0  0.0   0.0   \n",
+       "\n",
+       "      ...  bltz  hrry  qbkd   sk  prss   comb  m_tkl  m_tkl_percent  \\\n",
+       "0     ...  33.0   3.0   0.0  3.5   7.0  183.0   10.0          0.052   \n",
+       "1     ...  64.0   6.0   1.0  5.0  12.0  176.0    7.0          0.038   \n",
+       "2     ...  60.0   2.0   4.0  2.5   9.0  174.0   19.0          0.098   \n",
+       "3     ...  34.0   4.0   2.0  1.0   7.0  164.0    7.0          0.041   \n",
+       "4     ...  51.0   2.0   4.0  4.5  11.0  162.0    7.0          0.041   \n",
+       "...   ...   ...   ...   ...  ...   ...    ...    ...            ...   \n",
+       "1020  ...   1.0   0.0   0.0  0.0   0.0    0.0    0.0            NaN   \n",
+       "1021  ...   0.0   0.0   0.0  0.0   0.0    0.0    0.0            NaN   \n",
+       "1022  ...   1.0   0.0   0.0  0.0   0.0    0.0    0.0            NaN   \n",
+       "1023  ...   0.0   0.0   0.0  0.0   0.0    0.0    1.0          1.000   \n",
+       "1024  ...   0.0   0.0   0.0  0.0   0.0    0.0    1.0          1.000   \n",
+       "\n",
+       "         loaded  bats  \n",
+       "0    2026-01-17   0.0  \n",
+       "1    2026-01-17   0.0  \n",
+       "2    2026-01-17   0.0  \n",
+       "3    2026-01-17   0.0  \n",
+       "4    2026-01-17   0.0  \n",
+       "...         ...   ...  \n",
+       "1020 2026-01-17   0.0  \n",
+       "1021 2026-01-17   0.0  \n",
+       "1022 2026-01-17   0.0  \n",
+       "1023 2026-01-17   0.0  \n",
+       "1024 2026-01-17   0.0  \n",
+       "\n",
+       "[1025 rows x 30 columns]"
       ]
      },
      "execution_count": 1,
@@ -44,9 +371,9 @@
    "source": [
     "import nflreadpy as nfl\n",
     "\n",
-    "df = nfl.load_contracts()\n",
+    "def_adv = nfl.load_pfr_advstats(seasons=[2025], stat_type=\"def\", summary_level=\"season\").to_pandas()\n",
     "\n",
-    "df.columns"
+    "def_adv"
    ]
   }
  ],
