--- a/sports-iq-integration/nfl/test.ipynb
+++ b/sports-iq-integration/nfl/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "221db97e",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['season', 'player', 'pfr_id', 'tm', 'age', 'pos', 'g', 'gs', 'int',\n",
-      "       'tgt', 'cmp', 'cmp_percent', 'yds', 'yds_cmp', 'yds_tgt', 'td', 'rat',\n",
-      "       'dadot', 'air', 'yac', 'bltz', 'hrry', 'qbkd', 'sk', 'prss', 'comb',\n",
-      "       'm_tkl', 'm_tkl_percent', 'loaded', 'bats'],\n",
+      "Index(['player', 'position', 'team', 'is_active', 'year_signed', 'years',\n",
+      "       'value', 'apy', 'guaranteed', 'apy_cap_pct', 'inflated_value',\n",
+      "       'inflated_apy', 'inflated_guaranteed', 'player_page', 'otc_id',\n",
+      "       'gsis_id', 'date_of_birth', 'height', 'weight', 'college', 'draft_year',\n",
+      "       'draft_round', 'draft_overall', 'draft_team', 'cols'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -21,18 +22,227 @@
    "source": [
     "import nflreadpy as nfl\n",
     "\n",
-    "def_adv = nfl.load_pfr_advstats(seasons=[2025], stat_type=\"def\", summary_level=\"season\").to_pandas()\n",
+    "contracts = nfl.load_contracts().to_pandas()\n",
     "\n",
-    "print(def_adv.columns)"
+    "print(contracts.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c257c571",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player</th>\n",
+       "      <th>position</th>\n",
+       "      <th>team</th>\n",
+       "      <th>is_active</th>\n",
+       "      <th>year_signed</th>\n",
+       "      <th>years</th>\n",
+       "      <th>value</th>\n",
+       "      <th>apy</th>\n",
+       "      <th>guaranteed</th>\n",
+       "      <th>apy_cap_pct</th>\n",
+       "      <th>...</th>\n",
+       "      <th>gsis_id</th>\n",
+       "      <th>date_of_birth</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>college</th>\n",
+       "      <th>draft_year</th>\n",
+       "      <th>draft_round</th>\n",
+       "      <th>draft_overall</th>\n",
+       "      <th>draft_team</th>\n",
+       "      <th>cols</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Joe Burrow</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>Bengals</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>275.000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>146.510</td>\n",
+       "      <td>0.245</td>\n",
+       "      <td>...</td>\n",
+       "      <td>00-0036442</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6'4\"</td>\n",
+       "      <td>215</td>\n",
+       "      <td>LSU</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Bengals</td>\n",
+       "      <td>[{'year': '2020', 'team': 'Bengals', 'base_sal...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aaron Rodgers</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>GB/NYJ</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>150.815</td>\n",
+       "      <td>50.271667</td>\n",
+       "      <td>101.415</td>\n",
+       "      <td>0.241</td>\n",
+       "      <td>...</td>\n",
+       "      <td>00-0023459</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6'2\"</td>\n",
+       "      <td>225</td>\n",
+       "      <td>California</td>\n",
+       "      <td>2005.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Packers</td>\n",
+       "      <td>[{'year': '2005', 'team': 'Packers', 'base_sal...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Josh Allen</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>Bills</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>258.000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>100.000</td>\n",
+       "      <td>0.236</td>\n",
+       "      <td>...</td>\n",
+       "      <td>00-0034857</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6'5\"</td>\n",
+       "      <td>233</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Bills</td>\n",
+       "      <td>[{'year': '2018', 'team': 'Bills', 'base_salar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Russell Wilson</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>Broncos</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>245.000</td>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>124.000</td>\n",
+       "      <td>0.235</td>\n",
+       "      <td>...</td>\n",
+       "      <td>00-0029263</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5'11\"</td>\n",
+       "      <td>206</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>Seahawks</td>\n",
+       "      <td>[{'year': '2012', 'team': 'Seahawks', 'base_sa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dak Prescott</td>\n",
+       "      <td>QB</td>\n",
+       "      <td>Cowboys</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>240.000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>129.000</td>\n",
+       "      <td>0.235</td>\n",
+       "      <td>...</td>\n",
+       "      <td>00-0033077</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6'2\"</td>\n",
+       "      <td>226</td>\n",
+       "      <td>Mississippi State</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>Cowboys</td>\n",
+       "      <td>[{'year': '2016', 'team': 'Cowboys', 'base_sal...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           player position     team  is_active  year_signed  years    value  \\\n",
+       "0      Joe Burrow       QB  Bengals       True         2023    5.0  275.000   \n",
+       "1   Aaron Rodgers       QB   GB/NYJ      False         2022    5.0  150.815   \n",
+       "2      Josh Allen       QB    Bills      False         2021    6.0  258.000   \n",
+       "3  Russell Wilson       QB  Broncos      False         2022    5.0  245.000   \n",
+       "4    Dak Prescott       QB  Cowboys       True         2024    4.0  240.000   \n",
+       "\n",
+       "         apy  guaranteed  apy_cap_pct  ...     gsis_id  date_of_birth  height  \\\n",
+       "0  55.000000     146.510        0.245  ...  00-0036442           None    6'4\"   \n",
+       "1  50.271667     101.415        0.241  ...  00-0023459           None    6'2\"   \n",
+       "2  43.000000     100.000        0.236  ...  00-0034857           None    6'5\"   \n",
+       "3  49.000000     124.000        0.235  ...  00-0029263           None   5'11\"   \n",
+       "4  60.000000     129.000        0.235  ...  00-0033077           None    6'2\"   \n",
+       "\n",
+       "  weight            college draft_year draft_round draft_overall draft_team  \\\n",
+       "0    215                LSU     2020.0         1.0           1.0    Bengals   \n",
+       "1    225         California     2005.0         1.0          24.0    Packers   \n",
+       "2    233            Wyoming     2018.0         1.0           7.0      Bills   \n",
+       "3    206          Wisconsin     2012.0         3.0          75.0   Seahawks   \n",
+       "4    226  Mississippi State     2016.0         4.0         135.0    Cowboys   \n",
+       "\n",
+       "                                                cols  \n",
+       "0  [{'year': '2020', 'team': 'Bengals', 'base_sal...  \n",
+       "1  [{'year': '2005', 'team': 'Packers', 'base_sal...  \n",
+       "2  [{'year': '2018', 'team': 'Bills', 'base_salar...  \n",
+       "3  [{'year': '2012', 'team': 'Seahawks', 'base_sa...  \n",
+       "4  [{'year': '2016', 'team': 'Cowboys', 'base_sal...  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contracts.head()"
+   ]
   }
  ],
  "metadata": {
@@ -51,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
