--- a/sports-iq-integration/nfl/nfl-player-sportsiq-rating.ipynb
+++ b/sports-iq-integration/nfl/nfl-player-sportsiq-rating.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 91,
    "id": "fc1636a6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 92,
    "id": "35287976",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 93,
    "id": "cdc81ce5",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
       "\n",
       "Checking for cached df_master in 'nfl_player_master_2025.csv'...\n",
       "✓ Loading from cache: nfl_player_master_2025.csv\n",
-      "  Cache age: 1.2 hours\n"
+      "  Cache age: 0.6 hours\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 94,
    "id": "ba913630",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 95,
    "id": "c0592c7c",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 96,
    "id": "fed09940",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 97,
    "id": "ea0eb347",
    "metadata": {},
    "outputs": [],
@@ -387,40 +387,46 @@
     "\t\traw_std = peers['z_sum'].std()\n",
     "\n",
     "\t\tif raw_std == 0:\n",
-    "\t\t\tpeers['PerformanceScore'] = 50.0\n",
+    "\t\t\tpeers['RawScore'] = 50.0\n",
     "\t\telse:\n",
     "\t\t\t# Center at 75 for elite, 50 for average\n",
-    "\t\t\tpeers['PerformanceScore'] = ((peers['z_sum'] - raw_mean) / raw_std) * 15 + 60\n",
+    "\t\t\tpeers['RawScore'] = ((peers['z_sum'] - raw_mean) / raw_std) * 15 + 60\n",
     "\n",
-    "\t\tpeers['PerformanceScore'] = peers['PerformanceScore'].clip(0, 100)\n",
+    "\t\t# Modified: Only clamp the lower bound to 0, allow scores > 100 for elite performances\n",
+    "\t\tpeers['RawScore'] = peers['RawScore'].clip(lower=0)\n",
     "\n",
     "\t\t# 6. Calculate Confidence & Apply Shrinkage\n",
     "\t\t# We need the volume metric from metrics_df to calculate confidence\n",
-    "\t\tpeers['siq_confidence'] = metrics_df.apply(lambda r: self._calculate_confidence(r), axis=1)\n",
+    "\t\tpeers['ConfidenceScore'] = metrics_df.apply(lambda r: self._calculate_confidence(r), axis=1)\n",
     "\n",
     "\t\t# FORMULA: Score = (Perf * Conf) + (50 * (1-Conf))\n",
-    "\t\tpeers['SportsIQ'] = (peers['PerformanceScore'] * peers['siq_confidence']) + \\\n",
-    "\t\t\t\t\t\t\t(self.BASELINE_SCORE * (1 - peers['siq_confidence']))\n",
+    "\t\tpeers['SportsIQRating'] = (peers['RawScore'] * peers['ConfidenceScore']) + \\\n",
+    "\t\t\t\t\t\t\t(self.BASELINE_SCORE * (1 - peers['ConfidenceScore']))\n",
+    "\n",
+    "\t\t# Normalize SportsIQ so the max is 100\n",
+    "\t\tmax_siq = peers['SportsIQRating'].max()\n",
+    "\t\tif max_siq > 0:\n",
+    "\t\t\tpeers['SportsIQRating'] = peers['SportsIQRating'] * (100.0 / max_siq)\n",
     "\n",
     "\t\t# Formatting for display\n",
-    "\t\tpeers['SportsIQ'] = peers['SportsIQ'].round(1)\n",
-    "\t\tpeers['siq_confidence'] = (peers['siq_confidence'] * 100).round(1) # Display as 0-100\n",
+    "\t\tpeers['SportsIQRating'] = peers['SportsIQRating'].round(1)\n",
+    "\t\tpeers['ConfidenceScore'] = (peers['ConfidenceScore'] * 100).round(1) # Display as 0-100\n",
     "\n",
     "\t\t# Attach breakdown\n",
     "\t\tresult_cols = (\n",
-    "\t\t\t['player_name', 'gsis_id', 'depth_chart_position', 'SportsIQ', 'siq_confidence', 'PerformanceScore']\n",
+    "\t\t\t['player_name', 'gsis_id', 'depth_chart_position', 'SportsIQRating', 'RawScore', 'ConfidenceScore', 'RawScore']\n",
     "\t\t\t+ [f'metric_{m}' for m in metric_names]\n",
     "\t\t)\n",
     "\n",
     "\t\t# Helper to join metrics back for CSV output\n",
     "\t\tpeers = peers.join(metrics_df.add_prefix('metric_'))\n",
     "\n",
-    "\t\treturn peers[[c for c in result_cols if c in peers.columns]]\n"
+    "\t\treturn peers[[c for c in result_cols if c in peers.columns]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 98,
    "id": "9c09d260",
    "metadata": {},
    "outputs": [],
@@ -467,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 99,
    "id": "e00e2a95",
    "metadata": {},
    "outputs": [],
@@ -543,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 100,
    "id": "83d9b404",
    "metadata": {},
    "outputs": [],
@@ -629,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 101,
    "id": "b67bb507",
    "metadata": {},
    "outputs": [],
@@ -717,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 102,
    "id": "3e9eca82",
    "metadata": {},
    "outputs": [],
@@ -771,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 103,
    "id": "c822a5e5",
    "metadata": {},
    "outputs": [],
@@ -827,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 104,
    "id": "41e767fd",
    "metadata": {},
    "outputs": [],
@@ -892,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 105,
    "id": "3b1581a2",
    "metadata": {},
    "outputs": [
@@ -952,7 +958,7 @@
     "for pos, scorer in position_mapper.items():\n",
     "\tprint(f\"\\n\\n=== Scoring position: {pos} ===\")\n",
     "\tscored_df = scorer.score_all(df_master)\n",
-    "\tscored_df.sort_values('SportsIQ', ascending=False).to_csv(f'nfl_{pos.lower()}_sportsiq_{season}.csv', index=False)"
+    "\tscored_df.sort_values('SportsIQRating', ascending=False).to_csv(f'nfl_{pos.lower()}_sportsiq_{season}.csv', index=False)"
    ]
   }
  ],
